Deprecate 1.20- support - Rename variables - Reorganize file structure - Refactored logics - Clean up TODOs